=== 0.5 ===
2011-10-27  Aki Sasaki  <aki@mozilla.com>
* mozharness/base/log.py (LogMixin.log):
    If logging a fatal error message, call self.exit_on_error() if it
    exists and is callable (I may want to rename this).

* mozharness/test/device.py (DeviceMixin._query_config_device_serial):
    Added to make query_device_serial less of a mess.

* mozharness/test/device.py (DeviceMixin._query_attached_devices):
    Added to make query_device_serial less of a mess.

* mozharness/test/device.py (DeviceMixin.query_device_serial):
    Took logic out of here and into helper functions; added auto_connect functionality.

* mozharness/test/device.py (DeviceMixin.exit_on_error):
    Changed this from being a replacement for self.fatal() to a function
    to call before logging in self.fatal().

* mozharness/test/device.py (DeviceMixin.connect_device):
    Added.

* mozharness/test/device.py (DeviceMixin.disconnect_device):
    Added.
    Debating whether to reset self.device_serial or not -- probably not,
    for the scenario of getting device_serial from an external non-config
    source.

* mozharness/test/device.py (DeviceMixin.ping_device):
    Added auto_connect functionality.
    Added silent functionality.

* mozharness/test/device.py (DeviceMixin.check_device):
    Added auto_connect functionality.

* mozharness/test/device.py (DeviceMixin.wait_for_device):
    Use ping_device instead of query_device_root.

* mozharness/test/device.py (DeviceMixin.reboot_device):
    First attempt at getting this. However, run_command waits for exit
    even if I end with &; I need to thread/daemonize & ignore.

* scripts/device_talosrunner.py (DeviceTalosRunner.pre_cleanup_device):
    Added, since I'll want to have a post_cleanup_device.

* scripts/device_talosrunner.py (DeviceTalosRunner.run_talos):
    Added browser_output.txt error message; stub of explanation.
    Added PYTHONUNBUFFERED to the env.

* scripts/device_talosrunner.py (DeviceTalosRunner.post_cleanup_device):