@@ -124,6 +124,7 @@ ADBErrorList = BaseErrorList + [
  {'substr': r'''INSTALL_FAILED_INSUFFICIENT_STORAGE''', 'level': ERROR,},
  {'substr': r'''Android Debug Bridge version''', 'level': ERROR,},
  {'substr': r'''error: protocol fault''', 'level': ERROR,},
+ {'substr': r'''unable to connect to ''', 'level': ERROR,},
 ]
 
 
